--- a/app/src/main/res/layout/activity_n_puzzle.xml
+++ b/app/src/main/res/layout/activity_n_puzzle.xml
@@ -21,7 +21,7 @@
             android:id="@+id/tv_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/caesar_dressing"
+            android:fontFamily="@font/cairo_bold"
             android:gravity="center"
             android:text="@string/app_title"
             android:textColor="@color/btn_first"
